--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,1 +1,3 @@
 To get in touch, please send an email to <a href="mailto:nothanks@email.ghostinspector.com">nothanks@email.ghostinspector.com</a>.
+
+{{template "footer"}}
