added galleries controller

--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -19,6 +19,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/signup">Sign Up</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/galleries/new">Create Gallery</a></li>
+      </ul>
     </div>
   </div>
 </nav>
